<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:clickable="true"
        android:fadeScrollbars="true"
        android:fadingEdge="horizontal"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/imgvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/pop_profile_pic" />

        <TextView
            android:id="@+id/service_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imgvw"
            android:fontFamily="serif"
            android:text="@string/lst_service"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/provider_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/service_tv"
            android:layout_marginTop="42dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/lst_provider"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/charge_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/service_tv"
            android:layout_marginTop="74dp"
            android:text="@string/lst_charge" />

        <TextView
            android:id="@+id/area_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/service_tv"
            android:layout_marginTop="100dp"
            android:text="@string/lst_location" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/service_tv"
            android:layout_marginTop="130dp"
            android:text="@string/hint_phone_no" />

    </android.support.v7.widget.CardView>

</RelativeLayout>
