<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp">

    <TextView
        android:id="@+id/close_tv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top|end"
        android:background="@drawable/circlebackground"
        android:gravity="center"
        android:text="@string/quit_x_cancel"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="304dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:id="@+id/dialog_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="41dp">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/provider_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:fontFamily="serif"
            android:hint="@string/hint_service_provider"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/service_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/hint_service"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/charge_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_service_charge"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/phone_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_phone_no"
            android:padding="5dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/chat_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonstyle"
            android:fontFamily="serif"
            android:text="@string/btn_chat"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/call_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttonstyle"
            android:fontFamily="serif"
            android:text="@string/btn_call"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>