<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".service_provider.RegisterActivity">

    <!--android:background="@drawable/background"-->
    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:fadeScrollbars="true"
        android:fadingEdge="horizontal"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp">

        <TextView
            android:id="@+id/lb_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:elevation="20dp"
            android:fadingEdge="vertical"
            android:fontFamily="serif"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/lb_register"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/reg_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/provider_id_tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstyle"
                        android:hint="@string/prompt_identity"
                        android:inputType="textCapWords|textAutoComplete"
                        android:maxLines="1"
                        android:password="false"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/where_located_tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstyle"
                        android:hint="@string/prompt_location"
                        android:inputType="textCapWords|textAutoComplete"
                        android:maxLines="1"
                        android:password="false"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:singleLine="true"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_no_tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstyle"
                        android:hint="@string/prompt_phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:password="false"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:singleLine="true"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/qualification_tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstyle"
                        android:hint="@string/prompt_qualifications"
                        android:inputType="text"
                        android:maxLines="1"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:singleLine="true"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/username_tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstyle"
                        android:hint="@string/prompt_username"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:password="false"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:singleLine="true"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password_tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstyle"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:password="true"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:singleLine="true"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/reg_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttonstyle"
                    android:backgroundTint="@color/cardview_shadow_start_color"
                    android:onClick="popUp"
                    android:text="@string/action_register"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/toLogin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttonstyle"
                    android:backgroundTint="@color/cardview_shadow_start_color"
                    android:text="@string/action_sign_in_short"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>
</LinearLayout>