<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".service_provider.PostActivity"
    tools:showIn="@layout/activity_post">

        <ProgressBar
            android:id="@+id/reg_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/buttonstyle"
            android:clickable="true"
            android:fadeScrollbars="true"
            android:fadingEdge="horizontal"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:contentPadding="10dp">

            <ScrollView
                android:id="@+id/post_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/postService_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/service_type_tx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/buttonstyle"
                            android:hint="@string/service_type"
                            android:inputType="textCapWords|textAutoComplete"
                            android:maxLines="1"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/providerid_tx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/buttonstyle"
                            android:hint="@string/prompt_identity"
                            android:inputType="textAutoComplete|textPersonName"
                            android:maxLines="1"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:singleLine="true"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/charge_tx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/buttonstyle"
                            android:hint="@string/amount_charged"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:singleLine="true"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/area_tx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/buttonstyle"
                            android:hint="@string/prompt_location"
                            android:inputType="text"
                            android:maxLines="1"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:singleLine="true"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/phone_no_tx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/buttonstyle"
                            android:hint="@string/prompt_phone"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:singleLine="true"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/post_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/buttonstyle"
                        android:backgroundTint="@color/cardview_shadow_start_color"
                        android:onClick="popUp"
                        android:text="@string/post_service"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/back_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/buttonstyle"
                        android:backgroundTint="@color/cardview_shadow_start_color"
                        android:onClick="backToInfo"
                        android:text="@string/back"
                        android:textStyle="bold" />


                </LinearLayout>
            </ScrollView>

        </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>